--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "framer-motion": "^10.16.0",
     "next": "13.4.16",
     "next-compose-plugins": "^2.2.1",
     "postcss": "8.4.28",
