--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "tailwindcss-animate": "^1.0.6"
   }
 }
