--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.0",
     "next": "13.4.16",
     "next-compose-plugins": "^2.2.1",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
