--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.16",
     "next-compose-plugins": "^2.2.1",
     "nodemailer": "^6.9.4",
+    "photoswipe": "^5.3.8",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
