--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@storyblok/react": "^2.4.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "daisyui": "^3.7.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.0",
