--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "daisyui": "^3.7.7",
+    "dom-parser-react": "^0.3.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.0",
+    "jsdom": "^22.1.0",
     "next": "13.4.16",
     "next-compose-plugins": "^2.2.1",
     "nodemailer": "^6.9.4",
