--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsdom": "^22.1.0",
     "next": "13.4.16",
     "next-compose-plugins": "^2.2.1",
+    "next-share": "^0.27.0",
     "nodemailer": "^6.9.4",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.28",
