--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "@material-tailwind/react": "^2.1.10",
     "@storyblok/react": "^2.4.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
