--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.0",
     "jsdom": "^22.1.0",
-    "next": "13.4.16",
+    "next": "14.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-share": "^0.27.0",
     "nodemailer": "^6.9.4",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "storyblok-rich-text-react-renderer": "^2.9.0",
     "swiper": "^10.2.0",
